@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Logic <<Rectangle>> {

class Command
class FilterCommand
class FilterCommandParser
class TagContainsKeywordsPredicate
class CommandResult
class "<<interface>>\nModel" as Model

Command <|-- FilterCommand
FilterCommandParser --> FilterCommand
FilterCommandParser --> TagContainsKeywordsPredicate
FilterCommand --> TagContainsKeywordsPredicate
FilterCommand --> CommandResult
FilterCommand --> Model
TagContainsKeywordsPredicate --> Person
TagContainsKeywordsPredicate ..|> Predicate
}
@enduml
